fix: major overhaul for a data science focus and to align with college major

--- a/style.css
+++ b/style.css
@@ -337,7 +337,7 @@ section {
     display: flex;
     text-align: initial;
     flex-wrap: wrap;
-    flex-direction: row;
+    flex-direction: grid;
     gap: 2.5rem;
     justify-content: space-around;
 }
